Bug 490517 - Changing brightness with Night Light enabled causes un-night-light-tinted flickering
Summary: Changing brightness with Night Light enabled causes un-night-light-tinted fli...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: night color (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-07-19 18:01 UTC by Nate Graham
Modified: 2024-07-19 20:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Flickering (1.97 MB, video/mp4)
2024-07-19 18:01 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-07-19 18:01:41 UTC
Created attachment 171798 [details]
Flickering

Everything KDE from today's git master with Qt 6.7.2 on top of Fedora KDE 40.


STEPS TO REPRODUCE
1. Make Night Light turn on somehow (always on, wait, change location, etc).
2. Change brightness via any method (keyboard keys, manipulating slider in widget, scroll over widget compact representation, etc)


OBSERVED RESULT
The brightness changes, but the screen flickers with un-night-light-tinted colors. See attached screen recording, and pardon my daughter's sleepy squeaking sounds, which are not a part of this issue.


EXPECTED RESULT
No un-tinted flickering.
Comment 1 Bug Janitor Service 2024-07-19 19:40:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6147
Comment 2 Zamundaaa 2024-07-19 20:48:48 UTC
Git commit eddced099df15ca82b95d840365064e5c01ee97d by Xaver Hugl.
Committed on 19/07/2024 at 19:39.
Pushed by zamundaaa into branch 'master'.

backends/drm: don't unset degamma in prepareAtomicModeset

We're now using and, if necessary, un-setting the property in prepareAtomicPresentation

M  +0    -3    src/backends/drm/drm_pipeline.cpp

https://invent.kde.org/plasma/kwin/-/commit/eddced099df15ca82b95d840365064e5c01ee97d