backends/drm: don't unset degamma in prepareAtomicModeset

We're now using and, if necessary, un-setting the property in prepareAtomicPresentation

BUG: 490517