src/backends/drm/drm_pipeline.cpp
@@ -345,9 +345,6 @@ bool DrmPipeline::prepareAtomicModeset(DrmAtomicCommit *commit)
 
     commit->addProperty(m_pending.crtc->active, 1);
     commit->addBlob(m_pending.crtc->modeId, m_pending.mode->blob());
-    if (m_pending.crtc->degammaLut.isValid()) {
-        commit->addBlob(m_pending.crtc->degammaLut, nullptr);
-    }
 
     const auto primary = m_pending.crtc->primaryPlane();
     commit->addProperty(primary->crtcId, m_pending.crtc->id());
